vendor/wdsp/wdsp.h

/*  ---- fmmod.c ----------------------------------------------------------- */

WDSP_API void SetTXACTCSSFreq (int channel, double freq);
WDSP_API void SetRXAPanelCopy(int channel, int copy);
WDSP_API void SetRXAPanelGain1(int channel, double gain);
WDSP_API void SetRXAPanelGain2(int channel, double gainI, double gainQ);
WDSP_API void SetRXAPanelRun(int channel, int run);
WDSP_API void SetRXAPanelSelect(int channel, int select);
WDSP_API void SetTXAPanelGain1(int channel, double gain);
WDSP_API void SetTXAPanelRun(int channel, int run);
WDSP_API void SetTXAPanelSelect(int channel, int select);
WDSP_API void *create_resampleFV(int in_rate, int out_rate);
WDSP_API void destroy_resampleFV(void *ptr);
WDSP_API void xresampleFV(float *input, float *output, int numsamps, int *outsamps, void *ptr);
/*  ---- varsamp.c --------------------------------------------------------- */

WDSP_API void *create_varsampV(int in_rate, int out_rate, int R);
WDSP_API void destroy_varsampV(void *ptr);
WDSP_API void xvarsampV(double *input, double *output, int numsamps, double var, int *outsamps, void *ptr);
/*  ---- wisdom.c ---------------------------------------------------------- */

WDSP_API int WDSPwisdom(char *directory);
WDSP_API char *wisdom_get_status(void);