src/wdsp_sys/mod.rs

unsafe extern "C" {
    pub fn create_resampleFV(
        in_rate: ::std::os::raw::c_int,
        out_rate: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn xresampleFV(
        input: *mut f32,
        output: *mut f32,
        numsamps: ::std::os::raw::c_int,
        outsamps: *mut ::std::os::raw::c_int,
        ptr: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn destroy_resampleFV(ptr: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn SetRXAPanelRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAPanelSelect(channel: ::std::os::raw::c_int, select: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAPanelGain1(channel: ::std::os::raw::c_int, gain: f64);
}
unsafe extern "C" {
    pub fn SetRXAPanelGain2(channel: ::std::os::raw::c_int, gainI: f64, gainQ: f64);
}
unsafe extern "C" {
    pub fn SetRXAPanelCopy(channel: ::std::os::raw::c_int, copy: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAPanelRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAPanelSelect(channel: ::std::os::raw::c_int, select: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAPanelGain1(channel: ::std::os::raw::c_int, gain: f64);
}
unsafe extern "C" {
    pub fn create_varsampV(
        in_rate: ::std::os::raw::c_int,
        out_rate: ::std::os::raw::c_int,
        R: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn xvarsampV(
        input: *mut f64,
        output: *mut f64,
        numsamps: ::std::os::raw::c_int,
        var: f64,
        outsamps: *mut ::std::os::raw::c_int,
        ptr: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn destroy_varsampV(ptr: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn SetTXACTCSSFreq(channel: ::std::os::raw::c_int, freq: f64);
}
unsafe extern "C" {
    pub fn wisdom_get_status() -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn WDSPwisdom(directory: *const ::std::os::raw::c_char);
}
